@@ -346,71 +346,80 @@ class config:
         and other environment variables if available
         """
 
+        lib_dirs = []
+        pythonpath_dirs = []
+        env_vars = None
+
         catalyst_lib_dir = None
-        catalyst_pythonpath_dirs = ()
-        catalyst_env_vars = None
 
-        if self.libs['catalyst'].have:
+        libs = self.libs['catalyst'].flags['libs']
+        for l in libs.split('-Wl,'):
+            if l.find('libvtkPVPythonCatalyst') > -1:
+                catalyst_lib_dir = os.path.dirname(l)
+                break
 
-            libs = self.libs['catalyst'].flags['libs']
-            for l in libs.split('-Wl,'):
-                if l.find('libvtkPVPythonCatalyst') > -1:
-                    catalyst_lib_dir = os.path.dirname(l)
-                    break
-
+        if catalyst_lib_dir and self.features['relocatable']:
+            catalyst_root_dir = os.getenv('CATALYST_ROOT_DIR')
+            if catalyst_root_dir:
+                subdir_idx = catalyst_lib_dir.rfind('lib')
+                if subdir_idx > 1:
+                    catalyst_lib_dir = os.path.join(catalyst_root_dir,
+                                                    catalyst_lib_dir[subdir_idx:])
 
         if catalyst_lib_dir:
-
-            if self.features['relocatable']:
-                catalyst_root_dir = os.getenv('CATALYST_ROOT_DIR')
-                if catalyst_root_dir:
-                    subdir_idx = catalyst_lib_dir.rfind('lib')
-                    if subdir_idx > 1:
-                        catalyst_lib_dir = os.path.join(catalyst_root_dir,
-                                                        catalyst_lib_dir[subdir_idx:])
-
+            if self.libs['catalyst'].dynamic_load:
+                lib_dirs = [catalyst_lib_dir]
             sp_dir = os.path.join(catalyst_lib_dir, 'site-packages')
             if os.path.isdir(sp_dir):
-                catalyst_pythonpath_dirs = (os.path.join(sp_dir, 'vtk'),
-                                            os.path.join(sp_dir, 'paraview'),
-                                            sp_dir)
+                pythonpath_dirs = [os.path.join(sp_dir, 'vtk'),
+                                   os.path.join(sp_dir, 'paraview'),
+                                   sp_dir]
 
-            catalyst_plugin_path = os.getenv('CATALYST_PLUGIN_PATH')
-            if not catalyst_plugin_path:
-               catalyst_plugin_path = ''
-            catalyst_env_vars = {'PV_PLUGIN_PATH':catalyst_plugin_path}
+        # Add possible additional Catalyst dependency paths
 
-        return catalyst_lib_dir, catalyst_pythonpath_dirs, catalyst_env_vars
+        catalyst_ld_add_path = os.getenv('CATALYST_LD_ADD_PATH')
+        if catalyst_ld_add_path:
+            for d in catalyst_ld_add_path.split(os.pathsep):
+                if d: # avoid empty values before first or after last separator
+                    lib_dirs.append(d)
 
-    def get_plugin_search_paths(self):
+        # Add additional environment variables
+
+        catalyst_plugin_path = os.getenv('CATALYST_PLUGIN_PATH')
+        if not catalyst_plugin_path:
+            catalyst_plugin_path = ''
+        env_vars = {'PV_PLUGIN_PATH':catalyst_plugin_path}
+
+        return lib_dirs, pythonpath_dirs, env_vars
+
+    def get_run_environment_dependencies(self):
         """
-        return plugin library search path, Python search paths,
-        and other environment variables if available
+        return library search path, Python search paths,
+        and other environment variables if available or required
         """
 
-        plugin_lib_dirs = []
-        plugin_pythonpath_dirs = []
-        plugin_env_vars = {}
+        lib_dirs = []
+        pythonpath_dirs = []
+        env_vars = {}
 
         for lib in self.deplibs:
             if self.libs[lib].have == "yes":
 
                 if lib == 'catalyst':
-                    catalyst_lib_dir, catalyst_pythonpath_dirs, catalyst_env_vars \
+                    catalyst_lib_dirs, catalyst_pythonpath_dirs, catalyst_env_vars \
                         = self.__get_search_paths_catalyst__()
 
-                    if self.libs[lib].dynamic_load:
-                        plugin_lib_dirs.append(catalyst_lib_dir)
+                    for d in catalyst_lib_dirs:
+                        lib_dirs.append(d)
                     for p in catalyst_pythonpath_dirs:
-                        plugin_pythonpath_dirs.append(p)
-                    plugin_env_vars.update(catalyst_env_vars)
+                        pythonpath_dirs.append(p)
+                    env_vars.update(catalyst_env_vars)
 
-
-        return plugin_lib_dirs, plugin_pythonpath_dirs, plugin_env_vars
+        return lib_dirs, pythonpath_dirs, env_vars
 
     def print_config(self):
         """
-        Prinf configuration info
+        Print configuration info
         """
 
         for lib in self.deplibs:
